# skimindex

./: .gitignore  CLAUDE.md  DEV.md  README.md  _config.yml  install.sh  list.json  mkdocs.yml  rapport-orchestration-claude-code.md  skimindex.sh
src/skimindex_py/: pyproject.toml
src/skimindex_py/skimindex/: __init__.py  __main__.py  _decontam.py  _download.py  _split.py  _validate.py  bashwrapper.py  cli.py  config.py  log.py  naming.py  sections.py  sequences.py  split.py  stamp.py
src/skimindex_py/skimindex/cli/: __init__.py
src/skimindex_py/skimindex/config/: __init__.py  __main__.py  validate.py
src/skimindex_py/skimindex/datasets/: __init__.py
src/skimindex_py/skimindex/decontamination/: __init__.py  sections.py  split.py
src/skimindex_py/skimindex/download/: __init__.py  genbank.py  refgenome.py
src/skimindex_py/skimindex/log/: __init__.py
src/skimindex_py/skimindex/processing/: __init__.py  buildindex.py  compress.py  data.py  distribute.py  filter_n_only.py  filter_taxid.py  kmercount.py  split.py  uncompress.py
src/skimindex_py/skimindex/sequences/: __init__.py
src/skimindex_py/skimindex/sources/: __init__.py  genbank.py  sra.py
src/skimindex_py/skimindex/stamp/: __init__.py  __main__.py
src/skimindex_py/skimindex/unix/: __init__.py  base.py  compress.py  (+6 more)
src/skimindex_py/tests/: test_bashwrapper.py  test_cli.py  test_config.py  test_config_validate.py  test_download_logic.py  test_integration_logging.py  test_log.py  test_naming.py  test_sequences.py  test_sources_genbank.py  test_stamp.py  test_unix_base.py  test_unix_wrappers.py
(+157 files in other folders)
