[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "skimindex"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "plumbum>=1.8.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
docs = ["mkdocs>=1.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
download = "skimindex._download:main"
split = "skimindex._split:main"
